# rust-practice

./: Cargo.toml  README.md
cli/rcli/: Cargo.toml  README.md
cli/rcli/src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
cli/rcli/src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
cli/rcli/src/process/: base64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
concurrency/: Cargo.toml
concurrency/examples/: arc.rs  arc_mutex.rs  arc_swap.rs  async.rs  atomic.rs  atomic_relaxed.rs  barrier.rs  barrier2.rs  cell.rs  channel.rs  condvar.rs  cow.rs  create_thread.rs  crossbeam_scoped.rs  current_thread.rs  dashmap.rs  dredis.rs  drop_metux.rs  futures.rs  lazycell.rs  lazylock.rs  matrix.rs  metrics.rs  move.rs  once.rs  once_cell.rs  once_cell2.rs  oncecell.rs  oncurrency_count.rs  oneshot.rs  panic_thread.rs  poisoning.rs  pool.rs  rc.rs  refcell.rs  rwmutex.rs  safe_hashmap.rs  safe_vec.rs  scope_thread.rs  semaphore.rs  (+16 more)
concurrency/src/: lib.rs  martix.rs  metrics.rs  vector.rs
ecosystem/: Cargo.toml
ecosystem/examples/: axum_tracing.rs  error.rs  jieba.rs  log.rs
ecosystem/src/: error.rs  telemetry.rs
macors/: Cargo.toml
macors/examples/: enum_macro.rs  enum_macro_darling.rs  my_vec.rs
macors/src/: auto_from.rs  auto_from_darling.rs  lib.rs
src/: main.rs
src/algorithms/: linked_list.rs  mod.rs  quick_sort.rs
