[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

[dependencies]
affinity = "0.1.2"
anyhow = "1.0.95"
crossbeam = "0.8.4"
num_cpus = "1.16.0"
oneshot = "0.1.8"
rand = "0.8.5"
thread-control = "0.1.2"
thread-priority = "1.2.0"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
