[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
chrono = "0.4.39"
file-rotate = "0.7.6"
serde = "1.0.217"
serde_json = "1.0.137"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter", "fmt"] }
