[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
chrono = "0.4.39"
opentelemetry = "0.27.1"
opentelemetry-otlp = { version = "0.27.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
file-rotate = "0.7.6"
serde = "1.0.217"
serde_json = "1.0.137"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "env-filter",
    "fmt",
] }
tokio = { version = "1.43.0", features = [
  "fs",
  "rt",
  "rt-multi-thread",
  "macros",
] }
tonic = "0.12.3"
